fixing overflow on playlists div

--- a/react-app/src/components/Song/Song.css
+++ b/react-app/src/components/Song/Song.css
@@ -100,6 +100,7 @@
 }
 .song_addForm button:hover {
     background-color: #413f3f;
+    cursor: pointer;
 }
 
 .song__btsDiv {
@@ -107,12 +108,13 @@
     bottom: 1px;
     right:106px;
     width: 100%;
-    height: 100px;
+    height: auto;
     background-color: #282828;
     border-radius: 4px;
 }
 .song__btsDiv button:hover {
     background-color: #413f3f;
+    cursor: pointer;
 }
 
 .song_removeForm {
